Fixed vertical alignments in Titlebar

--- a/src/components/NavBars/TitleBar/TitleBar.module.css
+++ b/src/components/NavBars/TitleBar/TitleBar.module.css
@@ -193,7 +193,6 @@ header {
 	font-weight: 700;
 	text-transform: uppercase;
 	flex-shrink: 0;
-	margin-top: 3px;
 }
 
 @media only screen and (max-width: 1000px) {
